# smart-home

./: README.md
nano33iot/: .gitignore  Cargo.toml  Config.sample.toml  README.md  build.rs  config.rs.in  runner.sh
nano33iot/.cargo/: config
nano33iot/src/: display.rs  main.rs  measurement.rs  util.rs  wifi.rs
nano33iot/src/usb/: logger.rs  mod.rs
portal/: Cargo.toml  README.md  runner.sh
portal/.cargo/: config.toml
portal/hardware/pcb/: portal.sch
portal/hardware/pcb/lib/: AP64501SP-13.lbr
portal/portal-hw/: portal.brd  portal.sch
portal/portal-hw/lib/: 74LVC1G07SE-7.lbr  FSUSB42MUX.lbr  RT9742GGJ5.lbr  SRN8040-3R6Y.lbr  TPD4EUSB30DQAR.lbr
portal/src/: delay.rs  main.rs  screen.rs  ui.rs
portal/src/ui/: mod.rs  pos.rs
server/: Cargo.toml  Server.toml  smart-home.psql
server/src/: config.rs  main.rs
server/src/routes/: mod.rs
server/src/routes/api/: mod.rs
server/src/routes/api/v1/: datetime.rs  mod.rs  sonos.rs  temphum.rs
server/src/routes/app/: file_responder.rs  mod.rs
shared/: Cargo.toml
web/: README.md  angular.json  package-lock.json  package.json
web/src/: index.html  styles.scss
web/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.ts  app.module.ts
web/src/app/about/: about.component.html  about.component.scss  about.component.ts
web/src/app/speakers/: speakers.component.html  speakers.component.scss
web/src/app/temperature/: temperature.component.html  temperature.component.ts
web/src/app/tradfri/: tradfri.component.html  tradfri.component.scss  tradfri.component.ts
web/src/app/weather/: weather.component.html  weather.component.scss  weather.component.ts
