[package]
name = "nano33iot"
version = "0.1.0"
authors = ["Edwin Svensson <nano33@olback.net>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#arduino_nano33iot = { version = "0.4.0", features = [ "rt", "usb", "unproven" ], default-features = false }
arduino_nano33iot = { path = "../../atsamd/boards/arduino_nano33iot", features = [ "rt", "usb", "unproven" ], default-features = false }
embedded-hal = "0.2"
alloc-cortex-m = "0.4" # Heap allocation, used by format!, Vec, String etc.
cortex-m = "0.7"
cortex-m-rt = "0.6"
usb-device = { version = "0.2" }  # Only used for USB logging
usbd-serial = { version = "0.1" }
#wifi-nina = "0.1.2" # Wifi lib
wifi-nina = { path = "../../olback-wifi-nina" }
no-std-net = "0.5"
dht-sensor = "0.2.1" # Temp/Hum Sensor
log = { version = "0.4", features = [ "max_level_info" ] }

[build-dependencies]
serde = { version = "1.0", features = [ "derive" ] }
toml = "0.5"

