[package]
name = "rpi-control-center"
version = "0.1.0"
authors = ["Edwin Svensson <rpi-control-center@olback.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.11.3"
tradfri = { path = "../../tradfri-rs" }

