[package]
name = "portal"
version = "0.1.0"
authors = ["Edwin Svensson <rpi-portal@olback.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = { version = "0.11.3", features = [ "hal-unproven" ] }
embedded-hal = "0.2"
epd-waveshare = { path = "../../epd-waveshare", features = [ "graphics" ] }
embedded-graphics = "0.6"
