[package]
name = "portal"
version = "0.1.0"
authors = ["Edwin Svensson <rpi-portal@olback.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = { version = "0.11.3", features = [ "hal-unproven" ] }
embedded-hal = "0.2"
epd-waveshare = { git = "https://github.com/olback/epd-waveshare.git", branch = "fix-70", features = [ "graphics" ] }
embedded-graphics = "0.6"
profont = "0.4.0"
bitfont = "0.1.0" # Convert text to 8x8 "pixels"
fontdue = "0.4.0" # Render fonts from otf/ttf/ttc
lazy_static = "1.4"