[package]
name = "server"
version = "0.1.0"
authors = ["Edwin Svensson <server@olback.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", features = [ "postgres_pool" ] }
figment = { version = "0.10", features = [ "env" ] }
toml = "0.5"
serde = { version = "1.0", features = [ "derive" ] }
lazy_static = "1.4"
chrono = "0.4"
chrono-tz = "0.5"

